fixed grid section on mobile

--- a/src/components/pages/catalog/catalog-filter/catalog-filter.scss
+++ b/src/components/pages/catalog/catalog-filter/catalog-filter.scss
@@ -1,13 +1,14 @@
 .catalog-filter {
   grid-area: filter;
-  width: 293px;
+  max-width: 293px;
+  width: 100%;
   position: sticky;
   top: 20px;
-  padding: 32px 32px 20px 20px;
+  padding: ac(32px, 20px) ac(32px, 20px) ac(20px, 12px) ac(20px, 12px);
   border-right: 1px solid var(--color-gray-light, #E8E8E8);
 
   @media (max-width: 1024px) {
-    width: 100%;
+    max-width: 100% ;
     position: static;
     padding: 0;
     border-right: none;
