--- a/src/components/pages/catalog/catalog-grid/catalog-grid.scss
+++ b/src/components/pages/catalog/catalog-grid/catalog-grid.scss
@@ -1,13 +1,19 @@
 .catalog-grid {
   grid-area: grid;
   display: grid;
-  grid-template-columns: repeat(3, 318px);
+  grid-template-columns: repeat(3, 1fr);
+  align-items: stretch;
+  justify-items: center;
   gap: 8px;
   padding-top: 16px;
+  width: 100%;
+
+  @media (max-width: 1250px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
 
   @media (max-width: $breakpoint-tablet) {
     grid-template-columns: repeat(2, 1fr);
-    gap: 8px;
     padding-top: 0;
   }
 
@@ -15,8 +21,8 @@
     grid-column: span 2;
     height: 100%;
 
-    @media (max-width: 1024px) {
-      grid-column: span 2; // Still span 2 (full width) on mobile
+    @media (max-width: $breakpoint-tablet) {
+      grid-column: span 2;
       height: auto;
       min-height: 270px;
     }
@@ -25,18 +31,18 @@
   &__banner {
     grid-column: span 2;
     height: 100%;
+    max-width: 100%;
+    width: 100%;
 
-    @media (max-width: 1024px) {
+    @media (max-width: $breakpoint-tablet) {
        grid-column: span 2;
-    }
-
-    @media (max-width: $breakpoint-mobile) {
-      grid-column: span 2;
     }
   }
 
   // Ensure card takes full height of grid cell
   .product-card {
+    max-width: 100%;
+    width: 100%;
     height: 100%;
   }
 }
